<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/main_menu" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btnSelectWeek"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_week" />

        <Button
            android:id="@+id/btnSelectDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_day" />
        
    </LinearLayout>

</LinearLayout>